# data_pipeline_product_review

./: README.md  pyproject.toml
Data_pilelines_files/AI model and script/: load.py
Data_pilelines_files/Scripts/: data_pipeline_prototype.ipynb  test_extract.py  test_transform.py
data-pipeline-project/my-app/: app.py
data-pipeline-project/src/: extract.py  load.py  model.py  test.ipynb
my-app/: requirements.txt
scripts/: combined_df.csv  data_pipeline_prototype.ipynb
